[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Mug_movements.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 408.854, -480.592, 186.028, -15.8095, -193.022, 8.88606, -17.5879, -691.569, 0, 0, 0, 0, -237.039, -1010.49 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 856.835, -641.307, -118.032, -26.6827, 39.8671, -5.65045, 1483.56, -946.833, 0, 0, 0, 0, 1712.5, -740.079 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 741.937, -615.539, 0, 0, 0, 0, 740.758, -1417.39 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 465.939, -571.763, 90.0449, 114.444, -94.1114, -110.959, 152.888, -783.675, 0, 0, 0, 0, -612.885, -932.977 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array(  )
}

[node name="mug_movements" type="Node"]

script = ExtResource( 1 )

[node name="path_0" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1529.63, 1737.21 )
scale = Vector2( 0.333448, 0.380144 )
curve = SubResource( 1 )

[node name="path_1" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1528.98, 1725.65 )
scale = Vector2( 0.333448, 0.333448 )
curve = SubResource( 2 )

[node name="path_2" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1527.64, 1725.11 )
scale = Vector2( 0.333448, 0.333448 )
curve = SubResource( 3 )

[node name="path_3" type="Path2D" parent="." index="3"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1527.64, 1725.11 )
scale = Vector2( 0.333448, 0.333448 )
curve = SubResource( 4 )

[node name="mug_break" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 0.01
one_shot = true
autostart = false

[node name="path_4" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 5 )

[connection signal="timeout" from="mug_break" to="." method="_on_mug_break_timeout"]


